[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Enemies/JellyTombak.gd" type="Script" id=1]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/death/tingting-death1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/death/tingting-death2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attack tusuk/tingting-attacktusuk5.png" type="Texture" id=4]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/death/tingting-death4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/death/tingting-death3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle6.png" type="Texture" id=7]
[ext_resource path="res://Sounds/SFX/enemy_hit_1.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attack tusuk/tingting-attacktusuk4.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Utils/Sounds.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attack tusuk/tingting-attacktusuk6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attack tusuk/tingting-attacktusuk2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attack tusuk/tingting-attacktusuk3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attack tusuk/tingting-attacktusuk1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle7.png" type="Texture" id=19]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle3.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 19 ) ],
"loop": true,
"name": "move",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "dead",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": false,
"name": "charge",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "before_charge",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 11 ) ],
"loop": false,
"name": "after_charge",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.2339, 22.409 )

[sub_resource type="CircleShape2D" id=3]
radius = 1180.28

[sub_resource type="CircleShape2D" id=4]
radius = 2000.0

[sub_resource type="CircleShape2D" id=5]
radius = 250.0

[node name="JellyTombak" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -33 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "charge"
frame = 3
playing = true
flip_h = true

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, -14.5 )
shape = SubResource( 2 )

[node name="DetectRadius" type="Area2D" parent="."]
visible = false

[node name="Collider" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 3 )

[node name="ViewRadius" type="Area2D" parent="."]
visible = false

[node name="Collider" type="CollisionShape2D" parent="ViewRadius"]
shape = SubResource( 4 )

[node name="CheckPath" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackRadius" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 5 )

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="ChargeDelegate" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ChargeCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sounds" parent="." instance=ExtResource( 10 )]
sfx = ExtResource( 8 )
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="timeout" from="CheckPath" to="." method="_on_CheckPath_timeout"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="ChargeDelegate" to="." method="_on_ChargeDelegate_timeout"]
[connection signal="timeout" from="ChargeCooldown" to="." method="_on_ChargeCooldown_timeout"]
